--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </ol>
     <hr>
     <h3><a href="Contact me.html">Contact me</a></h3>
-    
-    
+    <hr>
+    <footer>Created by: Jonid Vreshtazi</footer>
 </body>
 </html>
